--- a/marias/Proximity.HR.Web/Web.config
+++ b/marias/Proximity.HR.Web/Web.config
@@ -9,8 +9,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=ANTONIETA;Initial Catalog=Proximity.HR.Database;User Id=sa;Password=.;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Proximity.HR.Web-20160213231551.mdf"/>
-    <add name="ProximityHREntities" connectionString="metadata=res://*/HR.csdl|res://*/HR.ssdl|res://*/HR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANTONIETA;initial catalog=Proximity.HR.Database;User Id=sa;Password=.;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=AcarMeel\sqlexpress;Initial Catalog=Proximity.HR.Database;User Id=sa;Password=.;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Proximity.HR.Web-20160213231551.mdf" />
+    <add name="ProximityHREntities" connectionString="metadata=res://*/HR.csdl|res://*/HR.ssdl|res://*/HR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AcarMeel\sqlexpress;initial catalog=Proximity.HR.Database;User Id=sa;Password=.;integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Proximity.HR.Web-20160213231551;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Proximity.HR.Web-20160213231551.mdf" />-->
     <add name="ADConnectionString" connectionString="LDAP://domain/DC=isthmusit,DC=com" />
   </connectionStrings>
   <appSettings> 
