--- a/marias/Proximity.HR.Data/App.Config
+++ b/marias/Proximity.HR.Data/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProximityHREntities" connectionString="metadata=res://*/HR.csdl|res://*/HR.ssdl|res://*/HR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANTONIETA;initial catalog=Proximity.HR.Database;integrated security=False;user id=sa;password=.;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProximityHREntities" connectionString="metadata=res://*/HR.csdl|res://*/HR.ssdl|res://*/HR.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AcarMeel\sqlexpress;initial catalog=Proximity.HR.Database;integrated security=False;user id=sa;password=.;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
